--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,23 @@
             background-color: #f8f9fa;
             padding: 1rem 0;
             margin-top: 2rem;
+            max-height: 3rem;
+        }
+        header {
+            max-height: 5rem;
         }
     </style>
+    {% if error_code %}
+    <style>
+        img {
+            -khtml-user-select: none;
+            -o-user-select: none;
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            user-select: none;
+        }
+    </style>
+    {% endif %}
     {% block extra_css %}{% endblock %}
 </head>
 <body>
@@ -46,12 +61,19 @@
             {% block content %}{% endblock %}
         </div>
     </main>
-
+    {% if error_code %}
     <footer>
         <div class="container text-center">
-            <p class="mb-0">&copy; 2023 My App. All rights reserved.</p>
+            <a href="{{ url_for('copyright') }}" style="text-decoration: none; font-size: larger;">&copy;2020 Grupo Multimedios Argentina</a>
         </div>
     </footer>
+    {% else %}
+    <footer>
+        <div class="container text-center">
+            <p class="mb-0" style="font-size: larger;">&copy; 2025 MemoryMap by Shahash Kandel and Matthew Dustin. All rights reserved.</p>
+        </div>
+    </footer>
+    {% endif %}
 
     <!-- Bootstrap 5 JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
