--- a/templates/login.html
+++ b/templates/login.html
@@ -50,6 +50,10 @@
             </div>
             {% endif %}
         </div>
+        <div class="mb-3 form-check">
+            <label class="form-label" for="recaptcha">Captcha</label>
+            {{ form.recaptcha }}
+        </label>
         
         <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
