--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,7 @@
                             <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                         {% else %}
                             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
                         {% endif %}
                     </div>
                 </div>
