--- a/templates/register.html
+++ b/templates/register.html
@@ -60,6 +60,9 @@
             </div>
             {% endif %}
         </div>
+        <div class="mb-3 form-check">
+            {{ form.recaptcha }}
+        </label>
 
         <button type="submit" class="btn btn-primary w-100">Register</button>
     </form>
